# simple_urdf_parser

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
assets/urdf/: twoR.urdf  ur3.urdf
examples/: demo_parse_urdf.py
simple_urdf_parser/: __init__.py  parser.py
tests/: test_simple_urdf_parser.py
